--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
     <div class="container">
         <section>
             <h2>Introduction to Trezor Suite Wallet</h2>
-            <img src="trezor-intro.jpg" alt="Trezor Suite Wallet">
+            <img src="https://trezor.io/images/suite/check-verify.jpg" alt="Trezor Suite Wallet" width="600" height="400">
             <p>The <a href="#">Trezor.io/start</a> Suite Wallet (version 22.9.3) is the ultimate tool for securing your cryptocurrency. It offers an easy setup process and unmatched security features. Whether you're new to crypto or a seasoned user, Trezor Suite ensures your assets are safe.</p>
         </section>
 
         <section>
             <h2>Features</h2>
-            <img src="trezor-features.jpg" alt="Trezor Features">
+            <img src="https://trezor.io/content/wysiwyg/Images_sorted/PUBLIC_ALL_Backup_and_Recovery/Trezor_Model_One/How_to_recover_on_T1/Empower_Update/new_recover_T1_1.png" alt="Trezor Features" width="600" height="400">
             <ul>
                 <li>Easy setup and user-friendly interface</li>
                 <li>Advanced security features</li>
